{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 885,
  "lineage": "eaa46517-202d-4b88-7532-e9aab19569e0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "kibana_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-013a129d325529d4d",
            "arn": "arn:aws:ec2:us-west-2:756849292726:instance/i-05d6324f555eba888",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05d6324f555eba888",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08ef7b1cfa8edbf8b",
            "private_dns": "ip-10-0-1-66.us-west-2.compute.internal",
            "private_ip": "10.0.1.66",
            "public_dns": "ec2-34-209-73-8.us-west-2.compute.amazonaws.com",
            "public_ip": "34.209.73.8",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d18caf1e6e5e779a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05641f7effed5373f",
            "tags": {
              "Environment": "dev",
              "Name": "tf-elk-kibana",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tf-elk-kibana",
              "Terraform": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-001a3b87931dff8fb",
              "sg-017478c8cbffb2877",
              "sg-042101cba6735fc5f",
              "sg-09f73d331314473d8",
              "sg-0e08fcf3e51800e42"
            ]
          },
          "dependencies": [
            "aws_security_group.elk_kibana",
            "aws_security_group.elk_logstash",
            "aws_subnet.tf_main",
            "aws_vpc.tf_main",
            "aws_security_group.allow_tls",
            "aws_security_group.elk_apm_server",
            "aws_security_group.elk_ent_search"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "logstash_node1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-013a129d325529d4d",
            "arn": "arn:aws:ec2:us-west-2:756849292726:instance/i-0a5145052f15b0f87",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a5145052f15b0f87",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0299ffdd7765de2ee",
            "private_dns": "ip-10-0-1-219.us-west-2.compute.internal",
            "private_ip": "10.0.1.219",
            "public_dns": "ec2-34-210-54-9.us-west-2.compute.amazonaws.com",
            "public_ip": "34.210.54.9",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0da201f860f674e23",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05641f7effed5373f",
            "tags": {
              "Environment": "dev",
              "Name": "tf-elk-ls01",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tf-elk-ls01",
              "Terraform": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-001a3b87931dff8fb",
              "sg-042101cba6735fc5f"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_security_group.elk_logstash",
            "aws_subnet.tf_main",
            "aws_vpc.tf_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "logstash_node2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-013a129d325529d4d",
            "arn": "arn:aws:ec2:us-west-2:756849292726:instance/i-0cf96155dc536182a",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cf96155dc536182a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00b69d6f49676ec45",
            "private_dns": "ip-10-0-1-166.us-west-2.compute.internal",
            "private_ip": "10.0.1.166",
            "public_dns": "ec2-34-212-31-204.us-west-2.compute.amazonaws.com",
            "public_ip": "34.212.31.204",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06a52f81c9d1b9e7b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05641f7effed5373f",
            "tags": {
              "Environment": "dev",
              "Name": "tf-elk-ls02",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tf-elk-ls02",
              "Terraform": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-001a3b87931dff8fb",
              "sg-042101cba6735fc5f"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_security_group.elk_logstash",
            "aws_subnet.tf_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:756849292726:internet-gateway/igw-074179c9f15f403ed",
            "id": "igw-074179c9f15f403ed",
            "owner_id": "756849292726",
            "tags": {
              "Name": "tf-main-gw"
            },
            "tags_all": {
              "Name": "tf-main-gw"
            },
            "vpc_id": "vpc-0802340d55438b0ba"
          },
          "dependencies": [
            "aws_vpc.tf_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:756849292726:route-table/rtb-08ff82af7ee608419",
            "id": "rtb-08ff82af7ee608419",
            "owner_id": "756849292726",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-074179c9f15f403ed",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-example-route"
            },
            "tags_all": {
              "Name": "tf-example-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0802340d55438b0ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.tf_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065331d211be30874",
            "route_table_id": "rtb-08ff82af7ee608419",
            "subnet_id": "subnet-05641f7effed5373f"
          },
          "dependencies": [
            "aws_route_table.example",
            "aws_subnet.tf_main",
            "aws_vpc.tf_main",
            "aws_internet_gateway.gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:756849292726:security-group/sg-001a3b87931dff8fb",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-001a3b87931dff8fb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from Everywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from Everywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "756849292726",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf_allow_tls"
            },
            "tags_all": {
              "Name": "tf_allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0802340d55438b0ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elk_apm_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:756849292726:security-group/sg-09f73d331314473d8",
            "description": "APM Server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09f73d331314473d8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Enterprise Search port",
                "from_port": 8200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8200
              }
            ],
            "name": "elk_apm_server",
            "name_prefix": "",
            "owner_id": "756849292726",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf_elk_ent_search"
            },
            "tags_all": {
              "Name": "tf_elk_ent_search"
            },
            "timeouts": null,
            "vpc_id": "vpc-0802340d55438b0ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elk_ent_search",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:756849292726:security-group/sg-017478c8cbffb2877",
            "description": "Kibana node",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-017478c8cbffb2877",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ent Search port",
                "from_port": 3002,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3002
              }
            ],
            "name": "elk_ent_search",
            "name_prefix": "",
            "owner_id": "756849292726",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf_elk_ent_search"
            },
            "tags_all": {
              "Name": "tf_elk_ent_search"
            },
            "timeouts": null,
            "vpc_id": "vpc-0802340d55438b0ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elk_es_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:756849292726:security-group/sg-0053451f5955d4488",
            "description": "Elasticsearch nodes ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0053451f5955d4488",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Port Allowed from everywhere",
                "from_port": 9200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9200
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Transport Port from the VPC only ",
                "from_port": 9300,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9300
              }
            ],
            "name": "elk_es_nodes",
            "name_prefix": "",
            "owner_id": "756849292726",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf_elk_es_nodes"
            },
            "tags_all": {
              "Name": "tf_elk_es_nodes"
            },
            "timeouts": null,
            "vpc_id": "vpc-0802340d55438b0ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elk_kibana",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:756849292726:security-group/sg-0e08fcf3e51800e42",
            "description": "Kibana node",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e08fcf3e51800e42",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kibana Port",
                "from_port": 5601,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5601
              }
            ],
            "name": "elk_kibana",
            "name_prefix": "",
            "owner_id": "756849292726",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf_elk_kibana"
            },
            "tags_all": {
              "Name": "tf_elk_kibana"
            },
            "timeouts": null,
            "vpc_id": "vpc-0802340d55438b0ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elk_logstash",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:756849292726:security-group/sg-042101cba6735fc5f",
            "description": "Logstash",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-042101cba6735fc5f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Logstash Input Beats",
                "from_port": 5044,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5044
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Logstash Monitoring port",
                "from_port": 9600,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9600
              }
            ],
            "name": "elk_logstash",
            "name_prefix": "",
            "owner_id": "756849292726",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf_elk_ent_search"
            },
            "tags_all": {
              "Name": "tf_elk_ent_search"
            },
            "timeouts": null,
            "vpc_id": "vpc-0802340d55438b0ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:756849292726:subnet/subnet-05641f7effed5373f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-05641f7effed5373f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "756849292726",
            "tags": {
              "Name": "tf-Main-subnet"
            },
            "tags_all": {
              "Name": "tf-Main-subnet"
            },
            "vpc_id": "vpc-0802340d55438b0ba"
          },
          "dependencies": [
            "aws_vpc.tf_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:756849292726:vpc/vpc-0802340d55438b0ba",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-085d8c682a9cf479d",
            "default_route_table_id": "rtb-08253a7c6145f4c46",
            "default_security_group_id": "sg-0e563f6b86623c13b",
            "dhcp_options_id": "dopt-cfa1e9b7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0802340d55438b0ba",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08253a7c6145f4c46",
            "owner_id": "756849292726",
            "tags": {
              "Name": "tf-main-vpc"
            },
            "tags_all": {
              "Name": "tf-main-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.ec2_instance[\"es01\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-090bc08d7ae1f3881",
            "arn": "arn:aws:ec2:us-west-2:756849292726:instance/i-071a2b7aaa51afac2",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-071a2b7aaa51afac2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5d.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-0f8bd05f92aee6137",
            "private_dns": "ip-10-0-1-186.us-west-2.compute.internal",
            "private_ip": "10.0.1.186",
            "public_dns": "ec2-52-13-19-161.us-west-2.compute.amazonaws.com",
            "public_ip": "52.13.19.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0319a40f469ab1626",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05641f7effed5373f",
            "tags": {
              "Environment": "dev",
              "Name": "tf-elk-es01",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tf-elk-es01",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "tf-elk-es01"
            },
            "vpc_security_group_ids": [
              "sg-001a3b87931dff8fb",
              "sg-0053451f5955d4488"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_security_group.elk_es_nodes",
            "aws_subnet.tf_main",
            "aws_vpc.tf_main",
            "data.aws_ami.amazon-2"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance[\"es02\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-090bc08d7ae1f3881",
            "arn": "arn:aws:ec2:us-west-2:756849292726:instance/i-0e58bd57eb555ef70",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e58bd57eb555ef70",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5d.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-0f4cd183404738bd3",
            "private_dns": "ip-10-0-1-248.us-west-2.compute.internal",
            "private_ip": "10.0.1.248",
            "public_dns": "ec2-54-191-51-131.us-west-2.compute.amazonaws.com",
            "public_ip": "54.191.51.131",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05f1e7cda874df89b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05641f7effed5373f",
            "tags": {
              "Environment": "dev",
              "Name": "tf-elk-es02",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tf-elk-es02",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "tf-elk-es02"
            },
            "vpc_security_group_ids": [
              "sg-001a3b87931dff8fb",
              "sg-0053451f5955d4488"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_security_group.elk_es_nodes",
            "aws_subnet.tf_main",
            "aws_vpc.tf_main",
            "data.aws_ami.amazon-2"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance[\"es03\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-090bc08d7ae1f3881",
            "arn": "arn:aws:ec2:us-west-2:756849292726:instance/i-0a7bbf96634f63a97",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 4,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a7bbf96634f63a97",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5d.2xlarge",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-01c31e16ff352ef7a",
            "private_dns": "ip-10-0-1-67.us-west-2.compute.internal",
            "private_ip": "10.0.1.67",
            "public_dns": "ec2-18-236-182-87.us-west-2.compute.amazonaws.com",
            "public_ip": "18.236.182.87",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0747bf74847b30a0a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05641f7effed5373f",
            "tags": {
              "Environment": "dev",
              "Name": "tf-elk-es03",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tf-elk-es03",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "tf-elk-es03"
            },
            "vpc_security_group_ids": [
              "sg-001a3b87931dff8fb",
              "sg-0053451f5955d4488"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_security_group.elk_es_nodes",
            "aws_subnet.tf_main",
            "aws_vpc.tf_main",
            "data.aws_ami.amazon-2"
          ]
        }
      ]
    }
  ]
}